Closed Bug 1784336 Opened 2 years ago Closed 2 years ago

Crash in [@ nsWindow::ResumeCompositorImpl] with MOZ_DIAGNOSTIC_ASSERT(mCompositorWidgetDelegate)

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox103 --- unaffected
firefox104 --- unaffected
firefox105 --- fixed

People

(Reporter: mccr8, Assigned: stransky)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/a2b8935a-b776-4a76-a8e0-d0c960220809

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(mCompositorWidgetDelegate)

Top 10 frames of crashing thread:

0 libxul.so nsWindow::ResumeCompositorImpl widget/gtk/nsWindow.cpp:6172
1 libxul.so nsWindow::ConfigureCompositor const widget/gtk/nsWindow.cpp:5330
2 libxul.so moz_container_wayland_frame_callback_handler widget/gtk/MozContainerWayland.cpp:272
3 libffi.so.8 ffi_call_unix64 
4 libffi.so.8 ffi_call_int.lto_priv.0 
5 libwayland-client.so.0 wl_closure_invoke.constprop.0 /usr/src/debug/wayland-1.21.0/src/connection.c:1025
6 libwayland-client.so.0 dispatch_event.isra.0 /usr/src/debug/wayland-1.21.0/src/wayland-client.c:1595
7 libwayland-client.so.0 wl_display_dispatch_queue_pending /usr/src/debug/wayland-1.21.0/src/wayland-client.c:1983
8 libgdk-3.so.0 _gdk_wayland_display_queue_events /usr/src/debug/gtk/gdk/wayland/gdkeventsource.c:201
9 libgdk-3.so.0 gdk_display_get_event /usr/src/debug/gtk/gdk/gdkdisplay.c:442

Looks like this assert was added in bug 1777664. I don't know if it is a real regression or a change in the crash but I'll mark it that way for now.

Set release status flags based on info from the regressing bug 1777664

:stransky, since you are the author of the regressor, bug 1777664, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(stransky)

Will look at it, Thanks.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/f165cdcc6bbd [Linux] Don't resume compositor if mCompositorWidgetDelegate is missing r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
See Also: → 1865302
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: