Bug 1784336 [Linux] Don't resume compositor if mCompositorWidgetDelegate is missing r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D154785